# mytetra_dev

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile.Debug  Makefile.Release  README.md  README_ENG.md  adb_logcat.sh  android-libmytetra.so-deployment-settings.json  app_process  build.pro  description-pak  git_commit.sh  git_diff.sh  git_log.sh  git_log_diff.sh  git_log_stat.sh  git_pull.sh  git_status.sh  history.txt  log01.txt  log02.txt  log03.txt  make_qt_5_4_2.sh  mytetra.pro  mytetra.pro.user.109bae6  mytetra.spec  object_script.mytetra.Release  readme.txt  readme_en.txt  readme_ru.txt  warning_01.txt
app/src/: CMakeLists.txt  licenseBSD.txt  licenseGPL.txt  main.cpp  main.h
app/src/controllers/actionLog/: ActionLogController.cpp  ActionLogController.h
app/src/controllers/attachTable/: AttachTableController.cpp  AttachTableController.h
app/src/controllers/databasesManagement/: DatabasesManagementController.cpp  DatabasesManagementController.h
app/src/controllers/editorToolbar/: EditorToolbarAvailableCommandsController.cpp  EditorToolbarAvailableCommandsController.h  EditorToolbarUsedCommandsController.h
app/src/controllers/recordTable/: RecordTableController.cpp  RecordTableController.h
app/src/controllers/shortcutSettings/: ShortcutSettingsController.cpp  ShortcutSettingsController.h
app/src/libraries/: ActionLogger.cpp  ActionLogger.h  ClipboardBranch.cpp  ClipboardBranch.h  ClipboardRecords.cpp  ClipboardRecords.h  DiskHelper.cpp  DiskHelper.h  Downloader.cpp  Downloader.h  FixedParameters.cpp  FixedParameters.h  GlobalParameters.cpp  GlobalParameters.h  IconSelectDialog.cpp  IconSelectDialog.h  MtComboBox.cpp  MtComboBox.h  MtStyledItemDelegate.h  MtTableWidget.h  PeriodicCheckBase.cpp  PeriodicCheckBase.h  PeriodicSynchro.cpp  PeriodicSynchro.h  PeriodicSyncro.cpp  PeriodicSyncro.h  PreviewFileDialog.cpp  PreviewFileDialog.h  RandomInitter.cpp  RandomInitter.h  ShortcutManager.cpp  ShortcutManager.h  TimerMonitoring.cpp  TimerMonitoring.h  TrashMonitoring.cpp  TrashMonitoring.h  WalkHistory.cpp  WindowSwitcher.cpp  WindowSwitcher.h  WorkRecordRestorer.cpp  (+1 more)
app/src/libraries/crypt/: CryptService.cpp  CryptService.h  Password.cpp  Password.h  Pbkdf2Qt.cpp  Pbkdf2Qt.h  RC5Simple.cpp  RC5Simple.h
app/src/libraries/helpers/: ActionHelper.cpp  ActionHelper.h  ConfigEditorHelper.cpp  ConfigEditorHelper.h  CssHelper.cpp  CssHelper.h  DebugHelper.cpp  DebugHelper.h  DiskHelper.cpp  GestureHelper.cpp  GestureHelper.h  HtmlHelper.cpp  HtmlHelper.h  MessageHelper.cpp  MessageHelper.h  ObjectHelper.cpp  ObjectHelper.h  ScreenHelper.cpp  ScreenHelper.h  SortHelper.cpp  SortHelper.h  UniqueIdHelper.cpp  UniqueIdHelper.h
app/src/libraries/qtSingleApplication/: CMakeLists.txt  qtlocalpeer.cpp  qtsingleapplication.cpp  qtsingleapplication.h
app/src/libraries/qtSingleApplication5/: qtlocalpeer.cpp  qtlocalpeer.h  qtsingleapplication.cpp  qtsinglecoreapplication.cpp
app/src/libraries/wyedit/: Editor.cpp  Editor.h  EditorAbsTable.cpp  EditorAbsTable.h  EditorAbsTableCell.cpp  EditorAbsTableCell.h  EditorAddTableForm.cpp  EditorAddTableForm.h  EditorConfig.cpp  EditorConfig.h  EditorConfigDialog.cpp  EditorConfigDialog.h  EditorConfigFont.cpp  EditorConfigFont.h  EditorConfigKeyboard.cpp  EditorConfigKeyboard.h  EditorConfigMathExpression.cpp  EditorConfigMathExpression.h  EditorConfigMisc.cpp  EditorConfigMisc.h  EditorConfigToolbars.cpp  EditorConfigToolbars.h  EditorContextMenu.cpp  EditorContextMenu.h  EditorCursorPositionDetector.cpp  EditorCursorPositionDetector.h  EditorFindDialog.cpp  EditorFindDialog.h  EditorFontFamilyComboBox.cpp  EditorFontFamilyComboBox.h  EditorFontSizeComboBox.cpp  EditorFontSizeComboBox.h  EditorFontToolFocus.cpp  EditorFontToolFocus.h  EditorImageProperties.cpp  EditorImageProperties.h  EditorIndentSliderAssistant.cpp  EditorIndentSliderAssistant.h  EditorMathExpressionDialog.cpp  EditorMathExpressionDialog.h  (+17 more)
app/src/models/actionLog/: ActionLogModel.cpp  ActionLogModel.h
app/src/models/appConfig/: AppConfig.cpp  AppConfig.h  AppConfigUpdater.cpp  AppConfigUpdater.h
app/src/models/attachTable/: Attach.cpp  Attach.h  AttachTableData.cpp  AttachTableData.h  AttachTableModel.cpp
app/src/models/dataBaseConfig/: DataBaseConfig.cpp  DataBaseConfig.h
app/src/models/databasesManagement/: DatabasesManagementModel.cpp  DatabasesManagementModel.h  KnownBasesConfig.cpp  KnownBasesConfig.h
app/src/models/editorToolbar/: EditorToolbarAvailableCommandsModel.cpp  EditorToolbarUsedCommandsModel.h
app/src/models/recordTable/: Record.cpp  Record.h  RecordTableData.cpp  RecordTableData.h  RecordTableModel.cpp  RecordTableModel.h  RecordTableProxyModel.cpp  RecordTableProxyModel.h
app/src/models/shortcutSettings/: ShortcutSettingsModel.cpp  ShortcutSettingsModel.h
app/src/models/tree/: KnowTreeModel.cpp  KnowTreeModel.h  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h  XmlTree.cpp  XmlTree.h
app/src/samples/: buttonwidth.ui
app/src/views/actionLog/: ActionLogScreen.cpp  ActionLogScreen.h  ActionLogView.cpp  ActionLogView.h
app/src/views/appConfigWindow/: AppConfigDialog.cpp  AppConfigDialog.h  AppConfigPage_Appearance.cpp  AppConfigPage_Appearance.h  AppConfigPage_Attach.cpp  AppConfigPage_Attach.h  AppConfigPage_Crypt.cpp  AppConfigPage_Crypt.h  AppConfigPage_History.cpp  AppConfigPage_History.h  AppConfigPage_Keyboard.cpp  AppConfigPage_Keyboard.h  AppConfigPage_Main.cpp  AppConfigPage_Main.h  AppConfigPage_Misc.cpp  AppConfigPage_Misc.h  AppConfigPage_RecordTable.cpp  AppConfigPage_RecordTable.h  AppConfigPage_Synchro.cpp  AppConfigPage_Synchro.h  ConfigDialog.cpp  ConfigDialog.h  ConfigPage.cpp  ConfigPage.h
app/src/views/attachTable/: AttachTableScreen.cpp  AttachTableScreen.h  AttachTableView.cpp  AttachTableView.h
app/src/views/consoleEmulator/: CommandRun.cpp  CommandRun.h  ConsoleEmulator.cpp  ConsoleEmulator.h  ExecuteCommand.cpp  ExecuteCommand.h
app/src/views/databasesManagement/: DatabasesManagementScreen.cpp  DatabasesManagementScreen.h  DatabasesManagementTable.cpp  DatabasesManagementTable.h
(+3056 files in other folders)
